--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.15.1",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
