--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "ant-design-vue": "^3.2.15",
     "element-plus": "^2.3.0",
     "path": "^0.12.7",
     "vue": "^3.2.45",
