--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.191",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^3.2.15",
+    "axios": "^1.3.4",
     "element-plus": "^2.3.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
@@ -22,7 +23,9 @@
     "wangeditor": "^4.7.15"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.7",
     "@vitejs/plugin-vue": "^4.0.0",
+    "mockjs": "^1.1.0",
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.3",
