--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
     "@types/lodash": "^4.14.191",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^3.2.15",
